add a function:DASHTrasmission
